src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>ANI__c</fullName>
        <description>ANI - Caller ID provided by CTI</description>
        <label>ANI</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <description>Brand Name passed from Cisco via CTI</description>
        <label>Brand</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CED__c</fullName>
        <description>Customer Entered Digits from Cisco IVR</description>
        <label>CED</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CNX2__CTIInfo__c</fullName>
        <description>Additional CTI Information</description>
        <label>CTI Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNX2__UniqueCallId__c</fullName>
        <description>UniqueCallId</description>
        <externalId>true</externalId>
        <label>UniqueCallId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Call_Driver__c</fullName>
        <label>Call Driver</label>
        <picklist>
            <picklistValues>
                <fullName>None Selected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update Account Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Catalog/Savings Passport Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount Request/Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Status Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation/Return Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feedback (Compliments/Complaints)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Product Inquiry</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Notes__c</fullName>
        <label>Call Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Driver__c</fullName>
        <label>Contact Driver</label>
        <picklist>
            <picklistValues>
                <fullName>Update account info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalog request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General product inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales/Discount Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order status inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation/Return inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savings Passport inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feedback</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DNIS__c</fullName>
        <description>DNIS - Dialed Number Information Service provided by CTI</description>
        <label>DNIS</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IVR_Case__c</fullName>
        <label>IVR_Case</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IVR_Customer__c</fullName>
        <label>IVR Customer</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IVR_Order__c</fullName>
        <label>IVR Order</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IVR_Status__c</fullName>
        <description>What IVR Flow and status the caller went through prior to the call arriving in Salesforce.</description>
        <label>IVR Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interaction_Type__c</fullName>
        <label>Interaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>type</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <description>Name of queue that inbound call was delivered from.  Call variable passed from Cisco to Salesforce via CTI</description>
        <label>Queue Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who_Id_Xref__c</fullName>
        <label>Who Account Id Xref</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
</CustomObject>